add chats and google oauth
