# internal/delivery/http/v1/auth.go
@@ -1,0 +1,195 @@
+package v1
+
+import (
+	"context"
+	"errors"
+	"net/http"
+
+	"github.com/ernur-eskermes/web-video-chat/internal/domain"
+	"github.com/ernur-eskermes/web-video-chat/internal/service"
+	"github.com/gin-gonic/gin"
+	"github.com/markbates/goth/gothic"
+)
+
+func (h *Handler) initAuthRoutes(api *gin.RouterGroup) {
+	users := api.Group("/auth")
+	{
+		users.POST("/sign-up", h.userSignUp)
+		users.POST("/sign-in", h.userSignIn)
+		users.POST("/refresh", h.userRefresh)
+		users.GET("/:provider", h.userAuthProvider)
+		users.GET("/:provider/callback", h.userAuthProviderCallback)
+	}
+}
+
+type userSignUpInput struct {
+	Username        string `json:"username" binding:"required,max=64"`
+	Password        string `json:"password" binding:"required,min=8,max=64"`
+	ConfirmPassword string `json:"confirm_password" binding:"required,min=8,max=64"`
+}
+
+type signInInput struct {
+	Username string `json:"username" binding:"required,max=64"`
+	Password string `json:"password" binding:"required,min=8,max=64"`
+}
+
+type tokenResponse struct {
+	AccessToken  string `json:"accessToken"`
+	RefreshToken string `json:"refreshToken"`
+}
+
+type refreshInput struct {
+	Token string `json:"token" binding:"required"`
+}
+
+// @Summary User SignUp
+// @Tags users-auth
+// @Description create user account
+// @ModuleID userSignUp
+// @Accept  json
+// @Produce  json
+// @Param input body userSignUpInput true "sign up info"
+// @Success 201 {string} string "ok"
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /auth/sign-up [post]
+func (h *Handler) userSignUp(c *gin.Context) {
+	var inp userSignUpInput
+	if err := c.BindJSON(&inp); err != nil {
+		newResponse(c, http.StatusBadRequest, "invalid input body")
+
+		return
+	}
+
+	if err := h.services.Users.SignUp(c.Request.Context(), service.UserSignUpInput{
+		Username:        inp.Username,
+		Password:        inp.Password,
+		ConfirmPassword: inp.ConfirmPassword,
+	}); err != nil {
+		if errors.Is(err, domain.ErrUserAlreadyExists) {
+			newResponse(c, http.StatusBadRequest, err.Error())
+
+			return
+		}
+
+		newResponse(c, http.StatusInternalServerError, err.Error())
+
+		return
+	}
+
+	c.Status(http.StatusCreated)
+}
+
+// @Summary User SignIn
+// @Tags users-auth
+// @Description user sign in
+// @ModuleID userSignIn
+// @Accept  json
+// @Produce  json
+// @Param input body signInInput true "sign up info"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /auth/sign-in [post]
+func (h *Handler) userSignIn(c *gin.Context) {
+	var inp signInInput
+	if err := c.BindJSON(&inp); err != nil {
+		newResponse(c, http.StatusBadRequest, "invalid input body")
+
+		return
+	}
+
+	res, err := h.services.Users.SignIn(c.Request.Context(), service.UserSignInInput{
+		Username: inp.Username,
+		Password: inp.Password,
+	})
+	if err != nil {
+		if errors.Is(err, domain.ErrUserNotFound) {
+			newResponse(c, http.StatusBadRequest, err.Error())
+
+			return
+		}
+
+		newResponse(c, http.StatusInternalServerError, err.Error())
+
+		return
+	}
+
+	c.JSON(http.StatusOK, tokenResponse{
+		AccessToken:  res.AccessToken,
+		RefreshToken: res.RefreshToken,
+	})
+}
+
+// @Summary User Refresh Tokens
+// @Tags users-auth
+// @Description user refresh tokens
+// @Accept  json
+// @Produce  json
+// @Param input body refreshInput true "sign up info"
+// @Success 200 {object} tokenResponse
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router /auth/refresh [post]
+func (h *Handler) userRefresh(c *gin.Context) {
+	var inp refreshInput
+	if err := c.BindJSON(&inp); err != nil {
+		newResponse(c, http.StatusBadRequest, "invalid input body")
+
+		return
+	}
+
+	res, err := h.services.Users.RefreshTokens(c.Request.Context(), inp.Token)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+
+		return
+	}
+
+	c.JSON(http.StatusOK, tokenResponse{
+		AccessToken:  res.AccessToken,
+		RefreshToken: res.RefreshToken,
+	})
+}
+
+// @Summary User Auth Provider
+// @Tags users-auth
+// @Description user auth provider
+// @Accept html
+// @Param provider path string true "provider name"
+// @Router /auth/{provider} [get]
+func (h *Handler) userAuthProvider(c *gin.Context) {
+	v, _ := c.Params.Get("provider")
+	gothic.BeginAuthHandler(c.Writer, c.Request.WithContext(
+		context.WithValue(c.Request.Context(), "provider", v),
+	))
+}
+
+// @Summary User Auth Provider Callback
+// @Tags users-auth
+// @Description user auth provider callback
+// @Accept json
+// @Param provider path string true "provider name"
+// @Router /auth/{provider}/callback [get]
+func (h *Handler) userAuthProviderCallback(c *gin.Context) {
+	user, err := gothic.CompleteUserAuth(c.Writer, c.Request)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+
+		return
+	}
+	res, err := h.services.Users.AuthProvider(c.Request.Context(), user)
+	if err != nil {
+		newResponse(c, http.StatusInternalServerError, err.Error())
+
+		return
+	}
+
+	c.JSON(http.StatusOK, tokenResponse{
+		AccessToken:  res.AccessToken,
+		RefreshToken: res.RefreshToken,
+	})
+}
